# epstein-cli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
docs/: API.md  CHANGELOG.md  USAGE.md
epstein/: cli.py  client.py
tests/: test_cli.py  test_client.py
