[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doj-multimedia-search"
version = "0.2.0"
description = "DOJ Multimedia Search API Client - Query and export document metadata"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Soumyadeep Ghosh", email = "ghoshsoumyadeep330@gmail.com"}
]
keywords = ["doj", "foia", "search", "api", "cli", "scraper"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Utilities",
]
dependencies = [
    "requests>=2.32.5",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
epstein = "epstein.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/scrape-doj"
Repository = "https://github.com/yourusername/scrape-doj"
Issues = "https://github.com/yourusername/scrape-doj/issues"

[tool.hatch.build.targets.wheel]
packages = ["epstein"]


